--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 * {
     font-family: "SN Pro", sans-serif;
     margin: 0;
-    
 }
 body{
     background-color: lightgoldenrodyellow;
@@ -83,12 +82,15 @@ table {
 }
 .deadline-table{
     margin-left: 0%;
-    
     overflow: hidden;
 }
 /* -------------- Task Card Styling ------------- */
 .checkbox{
-    width: 5%;
+    width: 11%;
+    background-color: lightgoldenrodyellow;
+    border-radius: 50px;
+    margin-left: 0;
+    margin-top: 0;
 }
 .task-display {
     margin-left: 0;
@@ -98,7 +100,7 @@ table {
 }
 .task-card {
     background-color: rgba(44, 44, 44,0.95);
-    border-radius: 10px;
+    border-radius: 25px;
     color: white;
     width: 30%;
     margin-left: 0;
