--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 5. Top Section
 6. Deadline Calendar
 7. Study Timer
-8. Footer Bar 
+8. Goals Section
+9. Footer Bar 
 
 @import url('https://fonts.googleapis.com/css2?family=SN+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
@@ -15,6 +16,8 @@
 * {
     font-family: "SN Pro", sans-serif;
     margin: 0;
+    max-width: 100vw;
+    overflow: hidden;
 }
 body{
     background-color: lightgoldenrodyellow;
@@ -93,8 +96,25 @@ h5{
     gap: 2vw;
     flex-wrap: nowrap; /* ensures side-by-side layout */
 }
+/*Media Queries*/
+@media screen and (max-width: 1350px) {
+    .top-section{
+        font-size: 1em;
+        flex-direction: column;
+    }
+    .top-section-left{
+        width: 100%;
+    }
+    .top-section-right{
+        width: 100%;
+        padding-left: 8vw;
+    }
+    .calendar-grid {
+        width: 100%;
+    }
+}
 .top-section-left {
-    width: 60%;
+    width: 50%;
     padding-left: 8vw;
 }
 .top-section-right {
@@ -142,11 +162,9 @@ h5{
 .day.blank {
     background-color: rgba(44, 44, 44,0.25); 
 }
-
 .day.date {
     background-color: white; /* white */
 }
-
 .day.date.has-task {
     background-color: rgb(255, 255, 154); /* yellow */
 }
@@ -182,7 +200,50 @@ h5{
     margin: 0.5%;
     
 }
+/* -------------- Goals Section ----------------*/
+#goals {
+    background-color:rgb(44, 44, 44);
+    padding: 3% 1% 1% 8vw;
+    margin: 3% 0;
+    width: 100%;
+    color: white;
+}
+.goal-setter{
+    margin:  1% 1% 1% 0;
+    padding: .5% 2% .5% 1.5% ;
+    background-color:rgb(255, 255, 154);
+    width: 14%;
+    border-radius: 20px;
+    color: rgb(44,44,44);
+    height: 20%;
+    align-content: center;
+}
+.goal-setter h3 {
+    padding: 2%;
+    padding-left: 0;
+}
+.grade-card-container{
+    display: flex;
 
+}
+.grade-card{
+    /*Styling*/
+    background-color: rgba(255, 255, 154,0.4);
+    color: rgba(255, 255, 255, 0.4);
+    border-radius: 25px;
+    /*Formatting*/
+    width: 15%;
+    padding: 2%;
+    margin: 2%;
+    margin-left: 0;
+    text-align: center;
+}
+.grade-card h3 {
+    font-size: 4.5em;
+}
+.grade-card h4 {
+    font-size: 2em;
+}
 /* -------------- Footer Bar Styling ------------- */
 .footer-bar {
     background-color: rgb(44, 44, 44);
